syntax = "proto2";

package openscenario;

message Orientation {
    optional string type = 1;
    optional double h = 2;
    optional double p = 3;
    optional double r = 4;
}

message LanePosition {
    optional string roadId = 1;
    optional string laneId = 2;
    optional double s = 3;
    optional double offset = 4;
    optional Orientation orientation = 5;
}