syntax = "proto2";
package openscenario;

// Enum for ReferenceContext
enum ReferenceContext {
    REFERENCECONTEXT_ABSOLUTE = 0;
    REFERENCECONTEXT_RELATIVE = 1;
}

// Message for Orientation
message Orientation {
    optional double h = 1;                  // 0..1
    optional double p = 2;                  // 0..1
    optional double r = 3;                  // 0..1
    optional ReferenceContext type = 4;     // 0..1
}
